--- a/css/common.sass
+++ b/css/common.sass
@@ -75,6 +75,22 @@ button
                 font-size: 20px
                 line-height: 30px
                 color: $blue2
+              
+              .input-number-container
+                display: grid
+                grid-template-columns: 65px 1fr
+                height: 50px
+                background: $gray2
+                border: 1px solid $gray
+                border-radius: 10px
+                padding: 0 15px
+                input
+                  height: unset
+                  padding: unset
+                  border: unset
+                  background: unset
+                  border-radius: unset
+
             
             .advise
               +flex_2
@@ -175,7 +191,9 @@ button
                     background: white
 
   &.typeModal
+    padding-right: 17px
     .pattern-container
+      position: relative
       +flex_5
       grid-gap: 20px
       background: $white
@@ -190,6 +208,7 @@ button
           position: absolute
           left: 0
           top: 0
+          cursor: pointer
         p
           +p-m
           font-size: 20px
@@ -230,6 +249,7 @@ button
         grid-template-columns: repeat(5,1fr)
         grid-gap: 25px
         padding: 0 35px
+        overflow-x: auto
         a
           +flex_5
           grid-gap: 17.5px
@@ -250,6 +270,58 @@ button
             color: $black2
             text-align: center
             word-break: break-word
+
+      .example-pattern-guide
+        position: absolute
+        background: $white
+        +flex_5
+        grid-gap: 30px
+        width: 100%
+        left: 0
+        top: 55px
+        padding: 15px 40px 30px
+        border-radius: 15px
+        box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1)
+        z-index: 5
+        opacity: 0
+        visibility: hidden
+        transition: all .3s
+        &.show
+          opacity: 1
+          visibility: visible
+        > p
+          +p-r
+          font-size: 20px
+          line-height: 24px
+          text-align: center
+          word-break: break-all
+        
+        .grid-about
+          display: grid
+          grid-template-columns: 200px 1fr
+          grid-gap: 45px
+          p
+            +p-r
+            font-size: 10px
+            line-height: 15px
+            word-break: break-all
+            color: $black2
+            
+          .pattern-examples
+            display: flex
+            grid-gap: 45px
+            flex-wrap: wrap
+            .p-example
+              +flex_5
+              grid-gap: 15px
+              p
+                +p-r
+                font-size: 15px
+                line-height: 18px
+                color: $black2
+                word-break: break-all
+                text-align: center
+
 
     #overlay	
       position: fixed
